--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,25 +1,23 @@
 <ion-tabs>
+    <ion-tab-bar slot="bottom">
+        <ion-tab-button tab="members">
+            <ion-icon aria-hidden="true" name="people"></ion-icon>
+            <ion-label>Members</ion-label>
+        </ion-tab-button>
 
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="members" href="/tabs/members">
-      <ion-icon aria-hidden="true" name="people"></ion-icon>
-      <ion-label>Members</ion-label>
-    </ion-tab-button>
+        <ion-tab-button tab="reminders">
+            <ion-icon aria-hidden="true" name="notifications"></ion-icon>
+            <ion-label>Reminders</ion-label>
+        </ion-tab-button>
 
-    <ion-tab-button tab="reminders" href="/tabs/reminders">
-      <ion-icon aria-hidden="true" name="notifications"></ion-icon>
-      <ion-label>Reminders</ion-label>
-    </ion-tab-button>
+        <ion-tab-button tab="backup">
+            <ion-icon aria-hidden="true" name="cloud-upload"></ion-icon>
+            <ion-label>Backup</ion-label>
+        </ion-tab-button>
 
-    <ion-tab-button tab="backup" href="/tabs/backup">
-      <ion-icon aria-hidden="true" name="cloud-upload"></ion-icon>
-      <ion-label>Backup</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="settings" href="/tabs/settings">
-      <ion-icon aria-hidden="true" name="settings"></ion-icon>
-      <ion-label>Settings</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-
+        <ion-tab-button tab="settings">
+            <ion-icon aria-hidden="true" name="settings"></ion-icon>
+            <ion-label>Settings</ion-label>
+        </ion-tab-button>
+    </ion-tab-bar>
 </ion-tabs>
