--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,117 +1,107 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Settings</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Settings</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Settings</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large">Settings</ion-title>
+        </ion-toolbar>
+    </ion-header>
 
-  <!-- User Info -->
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Account Information</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-item>
-        <ion-icon name="call" slot="start"></ion-icon>
-        <ion-label>
-          <h3>Mobile Number</h3>
-          <p>{{ currentUser || 'Not logged in' }}</p>
-        </ion-label>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
+    <!-- User Info -->
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>Account Information</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-item>
+                <ion-icon name="call" slot="start"></ion-icon>
+                <ion-label>
+                    <h3>Mobile Number</h3>
+                    <p>{{ currentUser || 'Not logged in' }}</p>
+                </ion-label>
+            </ion-item>
+        </ion-card-content>
+    </ion-card>
 
-  <!-- App Settings -->
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>App Settings</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-item>
-        <ion-label>Enable Notifications</ion-label>
-        <ion-toggle 
-          [(ngModel)]="settings.notifications" 
-          (ionChange)="onNotificationToggle()"
-          color="success">
-        </ion-toggle>
-      </ion-item>
+    <!-- App Settings -->
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>App Settings</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-item>
+                <ion-label>Enable Notifications</ion-label>
+                <ion-toggle [(ngModel)]="settings.notifications" (ionChange)="onNotificationToggle()" color="success">
+                </ion-toggle>
+            </ion-item>
 
-      <ion-item>
-        <ion-label>Auto Backup</ion-label>
-        <ion-toggle 
-          [(ngModel)]="settings.autoBackup" 
-          (ionChange)="onAutoBackupToggle()"
-          color="success">
-        </ion-toggle>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
+            <ion-item>
+                <ion-label>Auto Backup</ion-label>
+                <ion-toggle [(ngModel)]="settings.autoBackup" (ionChange)="onAutoBackupToggle()" color="success">
+                </ion-toggle>
+            </ion-item>
+        </ion-card-content>
+    </ion-card>
 
-  <!-- Data Management -->
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>Data Management</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-item button (click)="clearAllData()">
-        <ion-icon name="trash" slot="start" color="danger"></ion-icon>
-        <ion-label>
-          <h3>Clear All Data</h3>
-          <p>Delete all members and reminders</p>
-        </ion-label>
-      </ion-item>
+    <!-- Data Management -->
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>Data Management</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-item button (click)="clearAllData()">
+                <ion-icon name="trash" slot="start" color="danger"></ion-icon>
+                <ion-label>
+                    <h3>Clear All Data</h3>
+                    <p>Delete all members and reminders</p>
+                </ion-label>
+            </ion-item>
 
-      <ion-item button (click)="exportAllData()">
-        <ion-icon name="download" slot="start" color="primary"></ion-icon>
-        <ion-label>
-          <h3>Export All Data</h3>
-          <p>Download all data as JSON file</p>
-        </ion-label>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
+            <ion-item button (click)="exportAllData()">
+                <ion-icon name="download" slot="start" color="primary"></ion-icon>
+                <ion-label>
+                    <h3>Export All Data</h3>
+                    <p>Download all data as JSON file</p>
+                </ion-label>
+            </ion-item>
+        </ion-card-content>
+    </ion-card>
 
-  <!-- About -->
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title>About</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-item>
-        <ion-icon name="information-circle" slot="start"></ion-icon>
-        <ion-label>
-          <h3>App Version</h3>
-          <p>1.0.0</p>
-        </ion-label>
-      </ion-item>
+    <!-- About -->
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>About</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-item>
+                <ion-icon name="information-circle" slot="start"></ion-icon>
+                <ion-label>
+                    <h3>App Version</h3>
+                    <p>1.0.0</p>
+                </ion-label>
+            </ion-item>
 
-      <ion-item>
-        <ion-icon name="code" slot="start"></ion-icon>
-        <ion-label>
-          <h3>Built with</h3>
-          <p>Ionic + Angular</p>
-        </ion-label>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
+            <ion-item>
+                <ion-icon name="code" slot="start"></ion-icon>
+                <ion-label>
+                    <h3>Built with</h3>
+                    <p>Ionic + Angular</p>
+                </ion-label>
+            </ion-item>
+        </ion-card-content>
+    </ion-card>
 
-  <!-- Logout -->
-  <ion-card>
-    <ion-card-content>
-      <ion-button 
-        expand="block" 
-        color="danger" 
-        (click)="logout()"
-        class="ion-margin-top">
-        <ion-icon name="log-out" slot="start"></ion-icon>
-        Logout
-      </ion-button>
-    </ion-card-content>
-  </ion-card>
+    <!-- Logout -->
+    <ion-card>
+        <ion-card-content>
+            <ion-button expand="block" color="danger" (click)="logout()" class="ion-margin-top">
+                <ion-icon name="log-out" slot="start"></ion-icon>
+                Logout
+            </ion-button>
+        </ion-card-content>
+    </ion-card>
 </ion-content>
