--- a/src/global.scss
+++ b/src/global.scss
@@ -32,6 +32,7 @@
  * https://ionicframework.com/docs/theming/dark-mode
  */
 
+/* We keep the app in a custom light theme; disable automatic dark palette. */
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import "@ionic/angular/css/palettes/dark.system.css";
+/* @import "@ionic/angular/css/palettes/dark.system.css"; */
